--- a/README.org
+++ b/README.org
@@ -2,12 +2,38 @@
 
 Syntax highlighting support for https://wiki.apertium.org/wiki/Apertium-recursive
 
-Depends on https://github.com/unhammer/tree-sitter-langs/tree/rtx
+Depends on Emacs 29 or later (for builtin tree-sitter support).
 
 #+begin_src emacs-lisp
 (use-package rtx-mode
   :defer t
-  :mode (("\\.rtx\\'" . rtx-mode))
-  :config
-  (add-hook 'rtx-mode-hook #'tree-sitter-mode))
+  :load-path "~/where/you/cloned/rtx-mode"
+  :mode (("\\.rtx\\'" . rtx-mode)))
 #+end_src
+
+Do =M-x rtx-install-tree-sitter= once to install the rtx tree-sitter library.
+
+[[file:screenshot-rtx-mode.png]]
+
+** Build emacs with tree-sitter support
+Since Emacs 29 isn't in most repos yet, you probably have to build it yourself.
+
+The following will install tree-sitter to /usr/local/lib:
+#+begin_src sh
+  git clone https://github.com/tree-sitter/tree-sitter.git
+  cd tree-sitter/
+  make
+  sudo make install
+#+end_src
+
+Put this in ~/.bashrc:
+
+#+begin_src sh
+export LD_LIBRARY_PATH=/usr/local/lib
+#+end_src
+
+And build emacs =--with-tree-sitter=, e.g.
+#+begin_src sh
+./configure --with-x=yes --with-native-compilation --with-json --with-tree-sitter --prefix=$HOME/PREFIX/emacs
+#+end_src
+(native-compilation requires libgccjit-10-dev but makes everything faster)
